Task1, Task2.part1